--- a/src/views/partial/_footer.ejs
+++ b/src/views/partial/_footer.ejs
@@ -34,11 +34,11 @@
         </div>
 
         <div>
-          <a href="https://github.com/JuanZu77/" class="text-secondary text-decoration-none"">GitHub</a>
+          <a href="https://github.com/JuanZu77/" class="text-secondary text-decoration-none">GitHub</a>
         </div>
 
         <div>
-          <a href="https://www.youtube.com/@FaztCode" class="text-secondary text-decoration-none"">Fazt Code</a>
+          <a href="https://www.youtube.com/@FaztCode" class="text-secondary text-decoration-none">Fazt Code</a>
         </div>
     </div>
    <div class="col-xs-12">
